# TrabalhoOAC_2018

./: CMakeLists.txt  README.md  main.cpp
Model/: BancoReg.cpp  BancoReg.h  RAM.cpp  RAM.h  ULA.cpp  ULA.h  UnidadeControle.cpp  UnidadeControle.h  dados.txt
Util/: Util.cpp  Util.h
